name:                sdn-policy
version:             0.1.0.0
description:         Concurrent SDN policies composition
homepage:            https://github.com/githubuser/sdn-policy#readme
license:             BSD3
license-file:        LICENSE
author:              Konstantin Ivanov
maintainer:          martoon.hsk@gmail.com
copyright:           2017 K. Ivanov
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Sdn.Base
                       Sdn.Extra
                       Sdn.Protocol
                       Sdn.Schedule
  other-modules:       Sdn.Base.CStruct
                       Sdn.Base.Error
                       Sdn.Base.Policy
                       Sdn.Base.Quorum
                       Sdn.Base.Types

                       Sdn.Extra.Logging
                       Sdn.Extra.Util

                       Sdn.Protocol.Context
                       Sdn.Protocol.Messages
                       Sdn.Protocol.Phases
                       Sdn.Protocol.Processes
                       Sdn.Protocol.Topology
  build-depends:       base >= 4.7 && < 5
                     , ansi-terminal
                     , autoexporter
                     , containers
                     , data-default
                     , exceptions
                     , formatting
                     , fmt
                     , lens
                     , msgpack
                     , mtl
                     , stm
                     , stm-chans
                     , template-haskell
                     , text
                     , text-format
                     , time-units
                     , time-warp
                     , random
                     , QuickCheck
                     , universum
  default-language:    Haskell2010
  default-extensions:  FlexibleContexts
                       FlexibleInstances
                       OverloadedStrings
                       TypeOperators
                       ConstraintKinds
                       LambdaCase
                       MultiParamTypeClasses
                       MultiWayIf
                       NoImplicitPrelude
                       OverloadedStrings
                       ScopedTypeVariables
                       TupleSections
                       TypeApplications
                       TypeOperators
                       RecordWildCards
                       ViewPatterns
                       ExplicitForAll
                       DeriveGeneric
  ghc-options:         -Wall


executable demo
  hs-source-dirs:      trial
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , data-default
                     , sdn-policy
                     , time-warp
                     , QuickCheck
                     , universum
  default-language:    Haskell2010
  default-extensions:  FlexibleContexts
                       FlexibleInstances
                       OverloadedStrings
                       TypeOperators
                       ConstraintKinds
                       LambdaCase
                       MultiParamTypeClasses
                       MultiWayIf
                       NoImplicitPrelude
                       OverloadedStrings
                       ScopedTypeVariables
                       TupleSections
                       TypeApplications
                       TypeOperators
                       RecordWildCards
                       ViewPatterns
                       ExplicitForAll
  ghc-options:         -Wall


test-suite sdn-policy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  other-modules:       Spec
                       Test.Sdn.ClassicSpec
                       Test.Sdn.Properties
                       Test.Sdn.Util
  build-depends:       base
                     , async
                     , containers
                     , data-default
                     , formatting
                     , hspec
                     , MonadRandom 
                     , monad-control
                     , mtl
                     , sdn-policy
                     , stm
                     , time-warp
                     , random
                     , QuickCheck
                     , universum
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  FlexibleContexts
                       FlexibleInstances
                       OverloadedStrings
                       TypeOperators
                       ConstraintKinds
                       LambdaCase
                       MultiParamTypeClasses
                       MultiWayIf
                       NoImplicitPrelude
                       OverloadedStrings
                       ScopedTypeVariables
                       TupleSections
                       TypeApplications
                       TypeOperators
                       RecordWildCards
                       ViewPatterns
                       ExplicitForAll
  ghc-options:         -Wall


source-repository head
  type:     git
  location: https://github.com/martoon-00/sdn-policy
