name:                sdn-policy
version:             0.1.0.0
description:         Concurrent SDN policies composition
homepage:            https://github.com/githubuser/sdn-policy#readme
license:             BSD3
license-file:        LICENSE
author:              Konstantin Ivanov
maintainer:          martoon.hsk@gmail.com
copyright:           2017 K. Ivanov
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  exposed-modules:     Sdn.Base
                       Sdn.Extra
                       Sdn.Extra.Batching
                       Sdn.Extra.Logging
                       Sdn.Extra.MemStorage
                       Sdn.Extra.Schedule
                       Sdn.Extra.Util
                       Sdn.Policy
                       Sdn.Policy.Fake
                       Sdn.Protocol
                       Sdn.Protocol.Common
                       Sdn.Protocol.Classic
                       Sdn.Protocol.Fast
  other-modules:       Sdn.Base.CStruct
                       Sdn.Base.Error
                       Sdn.Base.Settings
                       Sdn.Base.Quorum
                       Sdn.Base.Types

                       Sdn.Protocol.Classic.Messages
                       Sdn.Protocol.Classic.Phases
                       Sdn.Protocol.Classic.Topology
                       Sdn.Protocol.Common.Node
                       Sdn.Protocol.Common.Messages
                       Sdn.Protocol.Common.Phases
                       Sdn.Protocol.Common.Topology
                       Sdn.Protocol.Common.Context
                       Sdn.Protocol.Common.Context.States
                       Sdn.Protocol.Common.Context.Storage
                       Sdn.Protocol.Common.Context.Data
                       Sdn.Protocol.Fast.Messages
                       Sdn.Protocol.Fast.Phases
                       Sdn.Protocol.Fast.Topology
                       Sdn.Protocol.Processes
                       Sdn.Protocol.Versions
  build-depends:       base >= 4.7 && < 5
                     , ansi-terminal
                     , autoexporter
                     , binary
                     , bytestring
                     , containers >= 0.5.9
                     , data-default
                     , dlist
                     , exceptions
                     , formatting
                     , fmt
                     , lens
                     , MonadRandom
                     , monad-control
                     , monad-stm
                     , msgpack
                     , mtl
                     , reflection
                     , spoon
                     , stm
                     , tagged
                     , template-haskell
                     , text
                     , text-format
                     , time-units
                     , time-warp
                     , transformers-base
                     , transformers
                     , random
                     , QuickCheck
                     , universum
  default-language:    Haskell2010
  default-extensions:  FlexibleContexts
                       FlexibleInstances
                       OverloadedStrings
                       TypeOperators
                       ConstraintKinds
                       LambdaCase
                       MultiParamTypeClasses
                       MultiWayIf
                       NoImplicitPrelude
                       OverloadedStrings
                       ScopedTypeVariables
                       TupleSections
                       TypeApplications
                       TypeOperators
                       RecordWildCards
                       ViewPatterns
                       ExplicitForAll
                       DeriveGeneric
                       DataKinds
                       BangPatterns
  ghc-options:         -Wall


executable demo
  hs-source-dirs:      demo
  main-is:             Main.hs
  other-modules:       Options
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , data-default
                     , formatting
                     , lens
                     , MonadRandom
                     , mtl
                     , optparse-applicative
                     , random
                     , sdn-policy
                     , text-format
                     , time-units
                     , time-warp
                     , QuickCheck
                     , universum
                     , yaml
  default-language:    Haskell2010
  default-extensions:  FlexibleContexts
                       FlexibleInstances
                       DeriveGeneric
                       OverloadedStrings
                       TypeOperators
                       ConstraintKinds
                       LambdaCase
                       MultiParamTypeClasses
                       MultiWayIf
                       NoImplicitPrelude
                       OverloadedStrings
                       ScopedTypeVariables
                       TupleSections
                       TypeApplications
                       TypeOperators
                       RecordWildCards
                       ViewPatterns
                       ExplicitForAll
  ghc-options:         -Wall

executable bench
  hs-source-dirs:      bench
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , data-default
                     , formatting
                     , lens
                     , mtl
                     , random
                     , sdn-policy
                     , text-format
                     , time-units
                     , time-warp
                     , QuickCheck
                     , universum
  default-language:    Haskell2010
  default-extensions:  FlexibleContexts
                       FlexibleInstances
                       DeriveGeneric
                       OverloadedStrings
                       TypeOperators
                       ConstraintKinds
                       LambdaCase
                       MultiParamTypeClasses
                       MultiWayIf
                       NoImplicitPrelude
                       OverloadedStrings
                       ScopedTypeVariables
                       TupleSections
                       TypeApplications
                       TypeOperators
                       RecordWildCards
                       ViewPatterns
                       ExplicitForAll
  ghc-options:         -Wall

executable controller
  hs-source-dirs:      controller
  main-is:             Main.hs
  other-modules:       Options
                       Sdn.Policy.OpenFlow
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , binary
                     , containers
                     , data-default
                     , formatting
                     , lens
                     , monad-control
                     , msgpack
                     , mtl
                     , openflow
                     , optparse-applicative
                     , random
                     , sdn-policy
                     , stm-chans
                     , text-format
                     , time-units
                     , time-warp
                     , QuickCheck
                     , universum
  default-language:    Haskell2010
  default-extensions:  FlexibleContexts
                       FlexibleInstances
                       DeriveGeneric
                       OverloadedStrings
                       TypeOperators
                       ConstraintKinds
                       LambdaCase
                       MultiParamTypeClasses
                       MultiWayIf
                       NoImplicitPrelude
                       OverloadedStrings
                       ScopedTypeVariables
                       TupleSections
                       TypeApplications
                       TypeOperators
                       RecordWildCards
                       ViewPatterns
                       ExplicitForAll
  ghc-options:         -Wall

test-suite sdn-policy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  other-modules:       Spec

                       Test.Sdn.Basic.CStructSpec
                       Test.Sdn.Basic.QuorumSpec

                       Test.Sdn.Overall.CommonSpec
                       Test.Sdn.Overall.FastSpec
                       Test.Sdn.Overall.Launcher
                       Test.Sdn.Overall.Properties
                       Test.Sdn.Overall.Properties.Protocol
                       Test.Sdn.Overall.Properties.Util
  build-depends:       base
                     , async
                     , containers
                     , data-default
                     , formatting
                     , hspec
                     , hspec-core
                     , MonadRandom 
                     , monad-control
                     , mtl
                     , lens
                     , sdn-policy
                     , stm
                     , time-warp
                     , random
                     , QuickCheck
                     , universum
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  FlexibleContexts
                       FlexibleInstances
                       OverloadedStrings
                       TypeOperators
                       ConstraintKinds
                       LambdaCase
                       MultiParamTypeClasses
                       MultiWayIf
                       NoImplicitPrelude
                       OverloadedStrings
                       ScopedTypeVariables
                       TupleSections
                       TypeApplications
                       TypeOperators
                       RecordWildCards
                       ViewPatterns
                       ExplicitForAll
  ghc-options:         -Wall


source-repository head
  type:     git
  location: https://github.com/martoon-00/sdn-policy
